--- a/material.tex
+++ b/material.tex
@@ -1,5 +1,6 @@
-\input{bayesian_networks}
-\input{treestructure_cpds}
-\input{independenceOfCausalInfluence}
-\newpage
-\input{markov_networks}
+\nocite{koller2009probabilistic}
+\include{bayesian_networks}
+\include{treestructure_cpds}
+\include{independenceOfCausalInfluence}
+\include{markov_networks}
+\include{exact_inference_variable_elim}
