added macros file to define all pictures

--- a/bayesian_networks.tex
+++ b/bayesian_networks.tex
@@ -1,1 +1,7 @@
 \section{Bayesian Networks}
+
+\begin{marginfigure}
+\bayesianStudentExample
+\caption{Example Bayesian network.}
+\end{marginfigure}
+
