--- a/notes.tex
+++ b/notes.tex
@@ -6,6 +6,7 @@
 \usepackage{amsthm}
 \usepackage{listings}
 \usepackage{tikz}
+\usetikzlibrary{shapes,arrows}
 
 % Set up the images/graphics package
 \usepackage{graphicx}
@@ -48,6 +49,8 @@
 \newtheorem{theorem}{Theorem}
 \newtheorem{definition}{Definition}
 %document variables
+
+\include{macros}
 
 \begin{document}
 
