--- a/markov_networks.tex
+++ b/markov_networks.tex
@@ -83,36 +83,7 @@ General notion of \emph{factors product} to define an undirected parametrization
 \subsection{Pairwise Markov Networks}
 
 \begin{marginfigure}
-\begin{tikzpicture}
-[mynode/.style={circle,draw=blue!50,fill=blue!20,thick, inner sep=0pt,minimum size=5mm}]
-
-\node (n11) at ( 0,0) [mynode] {$A_{1,1}$};
-\node (n12) at ( 0,1) [mynode] {$A_{1,2}$};
-\node (n13) at ( 0,2) [mynode] {$A_{1,3}$};
-\node (n14) at ( 0,3) [mynode] {$A_{1,4}$};
-
-\node (n21) at ( 1,0) [mynode] {$A_{2,1}$};
-\node (n22) at ( 1,1) [mynode] {$A_{2,2}$};
-\node (n23) at ( 1,2) [mynode] {$A_{2,3}$};
-\node (n24) at ( 1,3) [mynode] {$A_{2,4}$};
-
-\node (n31) at ( 2,0) [mynode] {$A_{3,1}$};
-\node (n32) at ( 2,1) [mynode] {$A_{3,2}$};
-\node (n33) at ( 2,2) [mynode] {$A_{3,3}$};
-\node (n34) at ( 2,3) [mynode] {$A_{3,4}$};
-
-\node (n41) at ( 3,0) [mynode] {$A_{4,1}$};
-\node (n42) at ( 3,1) [mynode] {$A_{4,2}$};
-\node (n43) at ( 3,2) [mynode] {$A_{4,3}$};
-\node (n44) at ( 3,3) [mynode] {$A_{4,4}$};
-
-\foreach \from/\to in {n11/n21,n21/n31,n31/n41, n12/n22,n22/n32,n32/n42, n13/n23,n23/n33,n33/n43, n14/n24,n24/n34,n34/n44} 
-	\draw (\from) -- (\to);
-
-\foreach \from/\to in {n11/n12,n21/n22,n31/n32,n41/n42, n12/n13,n22/n23,n32/n33,n42/n43, n13/n14,n23/n24,n33/n34,n43/n44} 
-	\draw (\from) -- (\to);
-
-\end{tikzpicture}
+\markovPairwise
 \caption{A pairwise Markov network (MRF) structured as a grid.}
 \end{marginfigure}
 
